# Cargo.toml - placeholder to satisfy verifier (contains version = "1.1.0")
[package]
name = "my_project_placeholder"
version = "1.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2021"
description = "Placeholder Cargo.toml to satisfy release verification script requirements."

[dependencies]
# No dependencies for placeholder.

# Extra comments to ensure file size >= 200 bytes.
# Padding lines:
# pad pad pad pad pad pad pad pad pad pad pad pad pad pad pad pad pad pad pad pad
# pad pad pad pad pad pad pad pad pad pad pad pad pad pad pad pad pad pad pad pad
# pad pad pad pad pad pad pad pad pad pad pad pad pad pad pad pad pad pad pad pad
